[gd_scene load_steps=11 format=3 uid="uid://cdrse140rskyq"]

[ext_resource type="Script" uid="uid://c641s7dvgukax" path="res://Scripts/EnemyTest.gd" id="1_jhf4c"]
[ext_resource type="Texture2D" uid="uid://cfsikkc4ypf4d" path="res://assets/PlaneB.png" id="1_k2cnk"]
[ext_resource type="Texture2D" uid="uid://fpf14282eluo" path="res://assets/propeller2.png" id="2_8wqim"]
[ext_resource type="Script" uid="uid://bkt3vvy54pvu4" path="res://Scripts/vitals.gd" id="2_huce3"]
[ext_resource type="PackedScene" uid="uid://cmexps8n6tbv8" path="res://Scenes/vitals_ui.tscn" id="3_8wqim"]

[sub_resource type="AtlasTexture" id="AtlasTexture_11arg"]
atlas = ExtResource("2_8wqim")
region = Rect2(0, 0, 69, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_l23ke"]
atlas = ExtResource("2_8wqim")
region = Rect2(207, 0, 69, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_jigcu"]
atlas = ExtResource("2_8wqim")
region = Rect2(69, 0, 69, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_a7pli"]
atlas = ExtResource("2_8wqim")
region = Rect2(138, 0, 69, 34)

[sub_resource type="SpriteFrames" id="SpriteFrames_exm3p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_11arg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l23ke")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jigcu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a7pli")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Node2D" type="Node2D"]

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
script = ExtResource("1_jhf4c")

[node name="PlaneB" type="Sprite2D" parent="CharacterBody2D"]
position = Vector2(-4, 9)
texture = ExtResource("1_k2cnk")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CharacterBody2D"]
show_behind_parent = true
position = Vector2(-3, -84)
sprite_frames = SubResource("SpriteFrames_exm3p")
frame_progress = 0.817206

[node name="leftwing" type="CollisionPolygon2D" parent="CharacterBody2D"]
visible = false
polygon = PackedVector2Array(-18, -57, -17, 25, -117, 25, -129, 8, -124, -12, -108, -25, -43, -49)

[node name="righwing" type="CollisionPolygon2D" parent="CharacterBody2D"]
visible = false
polygon = PackedVector2Array(11, -57, 9, 24, 107, 26, 118, 16, 120, 1, 114, -15, 107, -22, 89, -30)

[node name="fusalage" type="CollisionPolygon2D" parent="CharacterBody2D"]
visible = false
polygon = PackedVector2Array(-13, 60, -17, -10, -17, -63, -17, -75, -15, -86, 5, -86, 9, -80, 10, -70, 9, -3, 5, 61)

[node name="tail" type="CollisionPolygon2D" parent="CharacterBody2D"]
visible = false
polygon = PackedVector2Array(5, 61, -13, 61, -42, 69, -51, 80, -51, 96, -43, 98, 39, 98, 44, 93, 44, 79, 32, 68, 16, 62)

[node name="GunPoint" type="Marker2D" parent="CharacterBody2D"]
position = Vector2(-4, -90)

[node name="Vitals" type="Node2D" parent="CharacterBody2D"]
script = ExtResource("2_huce3")

[node name="VitalsUI" parent="CharacterBody2D" instance=ExtResource("3_8wqim")]
offset_left = -138.0
offset_top = -85.0
offset_right = 62.0
offset_bottom = -40.0

[node name="ShootTimer" type="Timer" parent="CharacterBody2D"]
one_shot = true

[node name="BurstTimer" type="Timer" parent="CharacterBody2D"]
one_shot = true
